# rfs-chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml  prompt.py
data/: 02_chapter2.md  complete_text.md
src/: app.py  prompt.py
tests/: eval.py  test_questions.py
